Implement signup and fix signin
